syntax = "proto3";

package proto.consumepb;

option go_package = "AKFAK/proto/consumepb";

import "proto/recordpb/record.proto";
import "proto/clustermetadatapb/cluster_metadata.proto";

message ConsumeRequest {
    int32 groupID = 1;
    int32 consumerID = 2;
    int32 partition = 3;
    string topicName = 4;
}

message ConsumeResponse {
    string topicName = 1;
    int32 partition = 2;
    recordpb.RecordBatch recordSet = 3;
}

message GetAssignmentRequest {
    int32 groupID = 1;
    string topicName = 2;
}

message MetadataAssignmenttate {
    string topicName = 1;
    int32 partitionIndex = 2;
    // broker holding replica that is assigned to consumer for that partition
    clustermetadatapb.MetadataBroker broker = 3;
}

message GetAssignmentResponse {
    // list of brokers holding isr for partition (excludes broker with assigned replica)
    // contacted when an assigned replica fails to respond 
    repeated clustermetadatapb.MetadataBroker isrBrokers = 1;
    // assigned Assignment. len(Assignment) == len(partitions)
    repeated MetadataAssignmenttate assignments = 2;
}